<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tv_project_submit_developer_name">개발자 이름</string>
    <string name="tv_project_submit_developer_email">이메일</string>
    <string name="tv_submit_project_developer_category_title">개발한 분야를 선택해주세요</string>
    <string name="tv_submit_project_category">카테고리↗</string>
    <string name="tv_project_submit_developer_leader">팀 리더</string>
    <string name="all_done">완료</string>
</resources>